--- a/app/assets/styles/globals.scss
+++ b/app/assets/styles/globals.scss
@@ -3,8 +3,7 @@
 @tailwind utilities;
 
 @import 'react-select';
-// @import 'react-redux-toastr/src/styles/index';
-
+@import 'react-redux-toastr/src/styles/index';
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;700&display=swap');
 
